<resources>
    <string name="app_name">Instruments Quiz</string>
    <string name="app_caption">Instruments Quiz</string>
    <string name="app_logotype">Trivia game about musical instruments</string>
    <string name="app_publisher">Published by kids (a)cademy</string>
    <string name="app_description">Instruments Quiz is a trivia game that challenges you to recognize musical instruments existing all over the world, from well know guitar or piano to esoteric didgeridoo.</string>
    <string name="app_name1">Musical</string>
    <string name="app_name2">Instruments</string>
    <string name="app_name3">Quiz</string>
    <string name="game_level">Level</string>
    <string name="game_level_complete">%s complete</string>
    <string name="game_level_unlocked">%s unlocked</string>
    <string name="quiz_start_message">Take a quiz to earn credits. Use credits to reveal game hints.</string>
    <string name="quiz_start_warning">Response speed maters. Start when ready.</string>
    <string name="balance_levels">Levels</string>
    <string name="balance_unlocked">Unlocked</string>
    <string name="balance_complete">Complete</string>
    <string name="balance_points">Points</string>
    <string name="balance_credits">Credits</string>
    <string name="game_over">You are done! Go to store and pick another quizChallenge!</string>
    <string name="card_level_score">score</string>
    <string name="card_level_total">total</string>
    <string name="card_level_done">done</string>
    <string name="verify_response">Verify Response</string>
    <string name="bad_letters">Bad Letters</string>
    <string name="quiz_complete">Quiz Complete</string>
    <string name="average_response_time">Average response time</string>
    <string name="best_response_time">Best response time</string>
    <string name="milliseconds" translatable="false">ms</string>
    <string name="quiz_fail">You may want to open Musical Instruments Atlas and learn more.</string>
    <string name="no_credit_quiz">Take a quiz to earn credits.</string>
    <string name="no_credit_hints">Use credits to reveal game hints.</string>
    <string name="trade_hints_title">Trade quiz credits for instrument name hints. You currently have %d credits.</string>
    <string name="trade_hints_reveal_label">Reveal Letter</string>
    <string name="trade_hints_reveal_description">Reveal first missing letter from instrument name</string>
    <string name="trade_hints_verify_label">Verify Input</string>
    <string name="trade_hints_verify_description">Verify existing letters from instrument name</string>
    <string name="trade_hints_hide_label">Hide Letters</string>
    <string name="trade_hints_hide_description">Hide unused letters from keyboard</string>
    <string name="trade_hints_play_label">Play Sample</string>
    <string name="trade_hints_play_description">Play instrument sample.</string>
    <string name="about_p1" translatable="false">@string/app_description</string>
    <string name="about_p2">Instruments Quiz is completely free. Free of annoying ads, no misleading in-app payment, no spy-ware.</string>
    <string name="about_p3">Development effort is donated. It is a humble way to show gratitude to Internet community that gives us all so much.</string>
    <string name="about_dev1_skils" translatable="false">Senior Java, Android and Web Full Stack</string>
    <string name="about_dev2_skils" translatable="false">UX Designer, Content Management</string>
    <string name="about_dev3_skils" translatable="false">Music Composer, Sound Engineering</string>
    <string name="about_place" translatable="false">Romania, Jassy</string>
    <string name="app_rate_caption">Rate Atlas</string>
    <string name="rate_on_store">Click here to rate on Google Play Store!</string>
    <string name="rate_review">Google ranking uses reviews.\n\nHelp increasing atlas visibility by writing reviews!</string>
    <string name="rate_improving">We invest substantial effort to ensure atlas quality, but still there may be mistakes.\n\nHelp us improving and spread the word!</string>
    <string name="rate_suggestion">If found something not reasonable please use\ncontact@kids-cademy.com\nto send us corrections.\n\nSuggestions for improvement are also welcomed.</string>
    <string name="no_ads_title">No Ads Manifesto</string>
    <string name="no_ads_p1">Arguable Internet did change the world and we all agree on that. But aggressive advertisement campaigns lead to myriad of sites specialized on content farming and applications created only for advertisement. Digital space becomes an immense advertising machine with poor quality and multiplicate content.</string>
    <string name="no_ads_p2">Digital space started to resemble old days media. In fact is worse. At least there we are not forced to support advertisement all the time; there is 30 minutes pause.</string>
    <string name="no_ads_p3">And advertisement quality is critical. Most ads are not so appealing, some of them being downright ugly. And in most cases destroy beautifully crafted sites and applications and ruin user experience.</string>
    <string name="no_ads_p4">We strongly believe there should be more elegant ways to sustain a business.</string>
    <string name="no_ads_p5">That being said, we do not believe advertisement is evil per se. Au contraire. Good ads can help deciding and can be fun to watch. The only problem is we do not want to see ads all the time and want them separated by content.</string>
    <string name="no_ads_conclusion">The good news is it may be a solution. Create separated space dedicated for advertisement. This way user can enjoy content and when in need for new services or products, or maybe for some fun, can willingly access advertisement.</string>
    <string name="no_ads_disagree">Disagree</string>
    <string name="no_ads_agree">Agree</string>
    <string name="app_exception">There are some problems running this app. Please try to stop and launch it again.\n\nEnsure app is updated. As final resort you can reinstall it.\n\nIf still not working please fill a bad comment on store.</string>
    <string name="err_no_storage">SD card not accessible. Unable to initialize instruments collection. Application abort.</string>
    <string name="err_load_fail">Instruments collection loading fails. Application abort.\n\nPlease check connection to Internet and SD card free space.</string>
    <string name="err_launcher">There is a temporary server error that prevent application loading. Please try again after couple minutes. We apologize for inconvenience.</string>
    <string name="exit">Exit</string>
    <string name="guitar">guitar</string>
    <string name="accordion">accordion</string>
    <string name="alphorn">alphorn</string>
    <string name="bagpipes">bagpipes</string>
    <string name="balaban">balaban</string>
    <string name="balafon">balafon</string>
    <string name="balalaika">balalaika</string>
    <string name="bandoneon">bandoneon</string>
    <string name="bandura">bandura</string>
    <string name="banjo">banjo</string>
    <string name="bansuri">bansuri</string>
    <string name="bass_clarinet">bass clarinet</string>
    <string name="bass_drum">bass drum</string>
    <string name="bass_flute">bass flute</string>
    <string name="bass_guitar">bass guitar</string>
    <string name="bouzouki">bouzouki</string>
    <string name="bucium">bucium</string>
    <string name="bugle">bugle</string>
    <string name="cajon">cajon</string>
    <string name="castanets">castanets</string>
    <string name="celesta">celesta</string>
    <string name="cello">cello</string>
    <string name="celtic_harp">celtic harp</string>
    <string name="cimbalom">cimbalom</string>
    <string name="clapsticks">clapsticks</string>
    <string name="clarinet">clarinet</string>
    <string name="cobza">cobza</string>
    <string name="concertina">concertina</string>
    <string name="conga">conga</string>
    <string name="cuatro">cuatro</string>
    <string name="cumbus">cumbus</string>
    <string name="dabakan">dabakan</string>
    <string name="daf">daf</string>
    <string name="dan_bau">dan bau</string>
    <string name="dhol">dhol</string>
    <string name="didgeridoo">didgeridoo</string>
    <string name="double_bass">double bass</string>
    <string name="drum_kit">drum kit</string>
    <string name="duduk">duduk</string>
    <string name="dulcitone">dulcitone</string>
    <string name="esraj">esraj</string>
    <string name="flute">flute</string>
    <string name="ghatam">ghatam</string>
    <string name="glockenspiel">glockenspiel</string>
    <string name="goblet_drum">goblet drum</string>
    <string name="guqin">guqin</string>
    <string name="gusli">gusli</string>
    <string name="guzheng">guzheng</string>
    <string name="hammered_dulcimer">hammered dulcimer</string>
    <string name="hang">hang</string>
    <string name="harmonica">harmonica</string>
    <string name="harmonium">harmonium</string>
    <string name="harp">harp</string>
    <string name="harpsichord">harpsichord</string>
    <string name="horagai">horagai</string>
    <string name="jaw_harp">jaw harp</string>
    <string name="kalimba">kalimba</string>
    <string name="kanjira">kanjira</string>
    <string name="kaval">kaval</string>
    <string name="koto">koto</string>
    <string name="lyra">lyra</string>
    <string name="mandolin">mandolin</string>
    <string name="marimba">marimba</string>
    <string name="melodica">melodica</string>
    <string name="mridangam">mridangam</string>
    <string name="mukkuri">mukkuri</string>
    <string name="oboe">oboe</string>
    <string name="ocarina">ocarina</string>
    <string name="panpipe">panpipe</string>
    <string name="piano">piano</string>
    <string name="piccolo">piccolo</string>
    <string name="pipe_organ">pipe organ</string>
    <string name="pungi">pungi</string>
    <string name="saxhorn">saxhorn</string>
    <string name="saxophone">saxophone</string>
    <string name="shakuhachi">shakuhachi</string>
    <string name="shehnai">shehnai</string>
    <string name="sitar">sitar</string>
    <string name="snare_drum">snare drum</string>
    <string name="suona">suona</string>
    <string name="taiko">taiko</string>
    <string name="tambourine">tambourine</string>
    <string name="tarogato">tarogato</string>
    <string name="theatre_organ">theatre organ</string>
    <string name="tonkori">tonkori</string>
    <string name="triangle">triangle</string>
    <string name="trombone">trombone</string>
    <string name="trumpet">trumpet</string>
    <string name="tuba">tuba</string>
    <string name="tubular_bells">tubular bells</string>
    <string name="ukulele">ukulele</string>
    <string name="vibraphone">vibraphone</string>
    <string name="vienna_horn">vienna horn</string>
    <string name="viola">viola</string>
    <string name="violin">violin</string>
    <string name="whip">whip</string>
    <string name="wood_block">wood block</string>
    <string name="xylophone">xylophone</string>
    <string name="zither">zither</string>
    <string name="zurna">zurna</string>
    <string-array name="level_names">
        <item>LEVEL 1</item>
        <item>LEVEL 2</item>
        <item>LEVEL 3</item>
        <item>LEVEL 4</item>
        <item>LEVEL 5</item>
        <item>LEVEL 6</item>
        <item>LEVEL 7</item>
        <item>LEVEL 8</item>
        <item>LEVEL 9</item>
        <item>LEVEL 10</item>
        <item>LEVEL 11</item>
        <item>LEVEL 12</item>
        <item>LEVEL 13</item>
        <item>LEVEL 14</item>
        <item>LEVEL 15</item>
        <item>LEVEL 16</item>
        <item>LEVEL 17</item>
        <item>LEVEL 18</item>
        <item>LEVEL 19</item>
        <item>LEVEL 20</item>
    </string-array>
    <string name="slash" translatable="false">/</string>
</resources>