<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/compo_page_background" />

    <FrameLayout style="@style/Page.AutohideHeader">

        <TextView
            style="@style/Page.HeaderTitle"
            android:text="@string/no_ads_title" />

        <TextView style="@style/Page.HeaderIcon.NoAds" />
    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/no_ads_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/page_body_margin_top">

            <TextView
                style="@style/Text.Paragraph.Accent"
                android:text="@string/no_ads_p1" />

            <TextView
                style="@style/Text.Paragraph"
                android:text="@string/no_ads_p2" />

            <TextView
                style="@style/Text.Paragraph"
                android:text="@string/no_ads_p3" />

            <TextView
                style="@style/Text.Paragraph"
                android:text="@string/no_ads_p4" />

            <TextView
                style="@style/Text.Paragraph"
                android:text="@string/no_ads_p5" />

            <TextView
                style="@style/Text.Paragraph.Emphasized"
                android:text="@string/no_ads_conclusion" />

            <LinearLayout style="@style/ButtonsGroup">

                <Button
                    android:id="@+id/no_ads_disagree_button"
                    style="@style/Button.First"
                    android:text="@string/no_ads_disagree" />

                <Button
                    android:id="@+id/no_ads_agree_button"
                    style="@style/Button"
                    android:text="@string/no_ads_agree" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.kidscademy.quiz.instruments.view.RandomColorFAB
        style="@style/FAB.Back.Autohide"
        app:layout_anchor="@id/no_ads_scroll" />
</android.support.design.widget.CoordinatorLayout>