<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:src="@drawable/right_border" />

        <TextView
            style="@style/Text.Title"
            android:paddingStart="20dp"
            android:text="@string/app_name1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:src="@drawable/right_border2" />

        <TextView
            style="@style/Text.Title"
            android:paddingStart="20dp"
            android:text="@string/app_name2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:src="@drawable/right_border3" />

        <TextView
            style="@style/Text.Title"
            android:paddingStart="20dp"
            android:text="@string/app_name3" />
    </LinearLayout>
</LinearLayout>
