<?xml version="1.0" encoding="utf-8"?>
<view xmlns:android="http://schemas.android.com/apk/res/android"
    class="com.kidscademy.quiz.instruments.GameActivity$TradeHintsDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/Page.Background"
        android:src="@drawable/page_bg1" />

    <com.kidscademy.quiz.instruments.view.MovingDotsBackground
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trade_hints_title"
            style="@style/trade_hints.title"
            android:text="@string/trade_hints_title" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:text="@string/trade_hints_reveal_label"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/reveal_letter_deduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:text="10"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/reveal_letter_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_next" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="top"
                android:paddingRight="20dp"
                android:text="@string/trade_hints_reveal_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/trade_hints_verify_label"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/verify_deduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="20"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/verify_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:src="@drawable/ic_navigate_next" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="top"
                android:paddingRight="20dp"
                android:text="@string/trade_hints_verify_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/trade_hints_hide_label"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/hide_letters_deduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="30"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/hide_letters_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:src="@drawable/ic_navigate_next" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="top"
                android:paddingRight="20dp"
                android:text="@string/trade_hints_hide_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/trade_hints_play_label"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <TextView
                android:id="@+id/play_sample_deduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="40"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/play_sample_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:src="@drawable/ic_navigate_next"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="top"
                android:paddingRight="20dp"
                android:text="@string/trade_hints_play_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />
        </GridLayout>
    </LinearLayout>

    <com.kidscademy.quiz.instruments.view.RandomColorFAB style="@style/fab_dialog_close" />

</view>