<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_level"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card:cardBackgroundColor="@color/grey_100"
    card:cardCornerRadius="4dp"
    card:cardElevation="12dp"
    card:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <ImageView
                android:id="@+id/card_level_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/level_bg1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_T40" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp">

                <com.kidscademy.quiz.instruments.view.HexaIcon
                    android:id="@+id/card_level_action"
                    android:layout_width="@dimen/level_icon_size"
                    android:layout_height="@dimen/level_icon_size"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    card:backgroundColor="@color/red_300"
                    card:borderColor="@color/grey_300"
                    card:borderSize="2"
                    card:iconDrawable="@drawable/action_next" />

                <TextView
                    android:id="@+id/card_level_name"
                    style="@style/Text.Title.Accent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="26dp"
                    android:layout_toRightOf="@+id/card_level_action"
                    tools:text="@string/sample_level_name" />

                <GridLayout
                    android:id="@+id/card_level_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/card_level_name"
                    android:layout_below="@+id/card_level_name"
                    android:columnCount="3"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Text.Label"
                        android:text="@string/card_level_total" />

                    <TextView style="@style/Text.Label.Separator" />

                    <TextView
                        android:id="@+id/card_level_total"
                        style="@style/Text.Label"
                        tools:text="10" />

                    <TextView
                        style="@style/Text.Label"
                        android:text="@string/card_level_done" />

                    <TextView style="@style/Text.Label.Separator" />

                    <TextView
                        android:id="@+id/card_level_done"
                        style="@style/Text.Label"
                        tools:text="4" />

                    <TextView
                        style="@style/Text.Label.Accent"
                        android:text="@string/card_level_score" />

                    <TextView style="@style/Text.Label.Separator.Accent" />

                    <TextView
                        android:id="@+id/card_level_score"
                        style="@style/Text.Label.Accent"
                        tools:text="20" />
                </GridLayout>
            </RelativeLayout>
        </FrameLayout>

        <ProgressBar
            android:id="@+id/card_level_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="2dp"
            android:minHeight="24dp"
            android:progress="75"
            android:progressDrawable="@drawable/level_progress_amber" />

    </LinearLayout>

</android.support.v7.widget.CardView>